--- a/trunk/PureLib/PureLib.csproj
+++ b/trunk/PureLib/PureLib.csproj
@@ -59,6 +59,7 @@
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -71,6 +72,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AspNet\ClientCertificateExtensions.cs" />
     <Compile Include="Common\ExceptionHandling.cs" />
     <Compile Include="Common\LanguageHelper.cs" />
     <Compile Include="Common\Templating.cs" />
@@ -148,6 +150,7 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
