--- a/trunk/PureLib/PureLib.csproj
+++ b/trunk/PureLib/PureLib.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PureLib</RootNamespace>
-    <AssemblyName>PureLib.Client</AssemblyName>
+    <AssemblyName>PureLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
